Bug 496361 - Diagnostics not shown on text editor when filename has a plus sign
Summary: Diagnostics not shown on text editor when filename has a plus sign
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: part (other bugs)
Version First Reported In: 24.08.1
Platform: NixOS Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-16 20:30 UTC by Santiago Cézar
Modified: 2024-11-18 08:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Kate with 4 files open in split view. 'test.js' and '?test.js' show errors hightlighted in the content, but '+test.js' and '+what.c' do not. (113.13 KB, image/png)
2024-11-16 20:30 UTC, Santiago Cézar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Santiago Cézar 2024-11-16 20:30:10 UTC
Created attachment 175869 [details]
Kate with 4 files open in split view. 'test.js' and '?test.js' show errors hightlighted in the content, but '+test.js' and '+what.c' do not.

SUMMARY
Using Kate 24.08.1 with an LSP server (tested with svelteserver, typescript-language-server and clangd). 

Diagnostics in files with a plus sign (anywhere) in the name won't show as highlights and squiggly lines in the code (see attachment), but they DO get reported in the diagnostics tab.

This is troubling when working with Svelte, as it uses '+page.svelte' and '+layout.svelte' for routing files.

STEPS TO REPRODUCE
1. Open some code file with a plus sign in the name.
2. Make sure the LSP server is running.
3. Write invalid code.

OBSERVED RESULT
The invalid code in question it's not being highlighted

EXPECTED RESULT
The invalid code should be highlighted.

SOFTWARE/OS VERSIONS
OS: NixOS 24.11
KDE Plasma Version: 6.1.5
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION
Might be a quirk with URI escaping sequences, but I've tried with #, ?, % and couldn't reproduce the bug.
Comment 1 Waqar Ahmed 2024-11-18 08:02:58 UTC
Git commit 4dda21fd64ce8b171c57600d68b55723c17c22f3 by Waqar Ahmed.
Committed on 18/11/2024 at 08:02.
Pushed by waqar into branch 'master'.

Handle encoded urls better

M  +3    -2    apps/lib/diagnostics/diagnosticview.cpp

https://invent.kde.org/utilities/kate/-/commit/4dda21fd64ce8b171c57600d68b55723c17c22f3