Handle encoded urls better

BUG: 496361